antex-rs/tui/src/history_cell/snapshots/antex_tui__history_cell__tests__alchemmist_startup_panel_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_transcript(&cell).join(\"\\n\")"
---
 ▀▄       ▄▀   ╭─ alchemmist antex · unknown ─────╮
  ▄▀█████▀▄    │  gpt-5.6-sol · low               │
▄█▀▀█████▀▀█▄  │  /tmp/project                    │
▀▀▄▄▀▀▀▀▀▄▄▀▀  │  YOLO · context 1M               │
  ██  ▄  ██    ╰──────────────────────────────────╯
   ▀▀▀ ▀▀▀

  ✦ alchemmist feature: Ctrl-S stashes your current prompt and restores it on the next press.
