antex-rs/tui/src/history_cell/snapshots/antex_tui__history_cell__tests__connected_server_version_notice_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: "render_lines(&cell.display_lines(100)).join(\"\\n\")"
---
⚠ A background Antex service is running v0.152.1, older than your Antex CLI v0.153.0.
