antex-rs/tui/src/history_cell/snapshots/antex_tui__history_cell__tests__error_event_bedrock_expired_signature_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1018
expression: rendered
---
■ Amazon Bedrock rejected the request because its AWS signature has expired. Refresh your AWS credentials and retry. If `AWS_BEARER_TOKEN_BEDROCK` is set, update or unset it, then restart Antex, url: https://bedrock-mantle.us-east-2.api.aws/openai/v1/responses
