antex-rs/tui/src/history_cell/snapshots/antex_tui__history_cell__tests__session_info_availability_nux_tooltip_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 726
expression: rendered
---
╭─────────────────────────────────────╮
│ >_ Antex (v0.153.4)                 │
│                                     │
│ model:     gpt-5   /model to change │
│ directory: /tmp/project             │
╰─────────────────────────────────────╯

  Tip: Model just became available
