antex-rs/tui/src/history_cell/snapshots/antex_tui__history_cell__tests__startup_panel_mascot_skins_and_narrow_fallback_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
Ant01:
wide:
  ▀▄     ▄▀    ╭─ alchemmist antex · unknown ─────╮
   ▄▀▄▄▄▀▄     │  gpt-5.6-sol · low               │
 ▄█▀▀███▀▀█▄   │  /tmp/project                    │
 ▀▀▄▄▀▀▀▄▄▀▀   │  YOLO · context 1M               │
  ▄█▀   ▀█▄    ╰──────────────────────────────────╯
 ▀▀       ▀▀
narrow:
╭─ alchemmist antex · unknown ─────╮
│  gpt-5.6-sol · low               │
│  /tmp/project                    │
│  YOLO · context 1M               │
╰──────────────────────────────────╯
---
Ant03:
wide:
 ▀▄       ▄▀   ╭─ alchemmist antex · unknown ─────╮
  ▄▀█████▀▄    │  gpt-5.6-sol · low               │
▄█▀▀█████▀▀█▄  │  /tmp/project                    │
▀▀▄▄▀▀▀▀▀▄▄▀▀  │  YOLO · context 1M               │
  ██  ▄  ██    ╰──────────────────────────────────╯
   ▀▀▀ ▀▀▀
narrow:
╭─ alchemmist antex · unknown ─────╮
│  gpt-5.6-sol · low               │
│  /tmp/project                    │
│  YOLO · context 1M               │
╰──────────────────────────────────╯
